mutants.out.old/log/crates__umbra-core__src__ellipsoid.rs_line_78_col_5.log

*** crates/umbra-core/src/ellipsoid.rs:78:5: replace geodetic_to_ecef_km -> Vector3 with Default::default()

*** mutation diff:
--- crates/umbra-core/src/ellipsoid.rs
+++ replace geodetic_to_ecef_km -> Vector3 with Default::default()
@@ -70,24 +70,17 @@
 ///
 /// 標準式: N = a / √(1 − e² sin²φ)、X=(N+h)cosφcosλ、Y=(N+h)cosφsinλ、Z=(N(1−e²)+h)sinφ。
 pub fn geodetic_to_ecef_km(
     ellipsoid: &Ellipsoid,
     geodetic_lat: f64,
     east_longitude: f64,
     height_m: f64,
 ) -> Vector3 {
-    let e2 = ellipsoid.e2();
-    let sin_lat = geodetic_lat.sin();
-    let cos_lat = geodetic_lat.cos();
-    let n = ellipsoid.a_m / (1.0 - e2 * sin_lat * sin_lat).sqrt();
-    let x_m = (n + height_m) * cos_lat * east_longitude.cos();
-    let y_m = (n + height_m) * cos_lat * east_longitude.sin();
-    let z_m = (n * (1.0 - e2) + height_m) * sin_lat;
-    Vector3::new(x_m / 1000.0, y_m / 1000.0, z_m / 1000.0)
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 #[cfg(test)]
 mod tests {
     use super::*;
     use core::f64::consts::PI;
 
     const WGS84: Ellipsoid = Ellipsoid::WGS84;


*** /usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=umbra-core@0.0.0
[1m[92m       Fresh[0m unicode-ident v1.0.24
[1m[92m       Fresh[0m proc-macro2 v1.0.106
[1m[92m       Fresh[0m quote v1.0.45
[1m[92m       Fresh[0m syn v2.0.117
[1m[92m       Fresh[0m thiserror-impl v2.0.18
[1m[92m       Fresh[0m thiserror v2.0.18
[1m[92m       Dirty[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core): the file `crates/umbra-core/src/ellipsoid.rs` has changed (1781452376.796422324s, 372021912ns after last build at 1781452376.424400412s)
[1m[92m   Compiling[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core)
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib`
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta`
[1m[91merror[E0277][0m[1m: the trait bound `Vector3: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/ellipsoid.rs:78:5
   [1m[94m|[0m
[1m[94m78[0m [1m[94m|[0m     Default::default() /* ~ changed by cargo-mutants ~ */
   [1m[94m|[0m     [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `Vector3`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `Vector3` with `#[derive(Default)]`
  [1m[94m--> [0mcrates/umbra-core/src/vector.rs:7:1
   [1m[94m|[0m
[1m[94m 7[0m [92m+ #[derive(Default)][0m
[1m[94m 8[0m [1m[94m|[0m pub struct Vector3 {
   [1m[94m|[0m

[1mFor more information about this error, try `rustc --explain E0277`.[0m
[1m[91merror[0m: could not compile `umbra-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta` (exit status: 1)
[1m[33mwarning[0m: build failed, waiting for other jobs to finish...
[1m[91merror[E0277][0m[1m: the trait bound `vector::Vector3: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/ellipsoid.rs:78:5
   [1m[94m|[0m
[1m[94m78[0m [1m[94m|[0m     Default::default() /* ~ changed by cargo-mutants ~ */
   [1m[94m|[0m     [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `vector::Vector3`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `vector::Vector3` with `#[derive(Default)]`
  [1m[94m--> [0mcrates/umbra-core/src/vector.rs:7:1
   [1m[94m|[0m
[1m[94m 7[0m [92m+ #[derive(Default)][0m
[1m[94m 8[0m [1m[94m|[0m pub struct Vector3 {
   [1m[94m|[0m

[1m[91merror[0m: could not compile `umbra-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib` (exit status: 1)

*** result: Failure(101)
